--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,16 @@
     "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
-  "dependencies": {    
+  "dependencies": {
+    "@repo/trpc": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.81.5",
+    "@trpc/react-query": "^11.4.3",
     "next": "^15.3.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
