--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -2,6 +2,9 @@
     "name": "@repo/trpc",
     "version": "1.0.0",    
     "private": true,
+    "exports": {
+        "./router": "./src/server/server.ts"
+    },
     "peerDependencies": {
         "zod": "3.25.67",
         "@trpc/server": "11.4.3"
